--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -32,6 +32,8 @@ jobs:
           cd Lab1
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install setuptools
+          pip install -e .
           alembic upgrade head
       # Шаг 4: Запуск ваших тестов
       - name: Run tests with pytest
