--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Run tests with pytest
         run: |
           cd Lab1
-          python -m pytest ./Lab1/tests/test_user.py -v
+          python -m pytest tests/test_user.py -v
